<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorprimary"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/innerLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="6dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/text_title_sno"
                android:textColor="@color/colorffffff"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/text_title_office"
                android:gravity="center"
                android:textColor="@color/colorffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/text_title_lattitude"
                android:gravity="center"
                android:textColor="@color/colorffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/text_title_longitude"
                android:gravity="center"
                android:textColor="@color/colorffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/text_tile_address"
                android:gravity="center"
                android:textColor="@color/colorffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>