<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"

    android:layout_height="40dp"
    android:background="@color/colorprimary"
    android:gravity="center_vertical">

    <!--<HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@cocolorprimary622a"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/innerLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">-->

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_name"
        android:textColor="@color/colorffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:background="@color/color000000" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/e_title_number"
        android:textColor="@color/colorffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:background="@color/color000000" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_product"
        android:textColor="@color/colorffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:background="@color/color000000" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_desc"
        android:textColor="@color/colorffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color000000" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_date"
        android:textColor="@color/colorffffff"
        android:textSize="16sp"
        android:textStyle="bold" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color000000" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_note"
        android:textColor="@color/colorffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>