<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:id="@+id/enquiryData"
    android:background="@color/colorffffff"
    android:gravity="center_vertical">

    <!--<HorizontalScrollView
        android:id="@+id/hsv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@cocolorprimary622a"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/innerLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">-->
    <TextView
        android:id="@+id/tvCust"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_cust"
        android:textColor="@color/colorprimary"
        android:textSize="14sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:background="@color/color000000" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_name"
        android:textColor="@color/colorprimary"
        android:textSize="14sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:background="@color/color000000" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/e_title_number"
        android:textColor="@color/colorprimary"
        android:textSize="14sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:background="@color/color000000" />

    <TextView
        android:id="@+id/tvProduct"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_product"
        android:textColor="@color/colorprimary"
        android:textSize="14sp"/>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:background="@color/color000000" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_desc"
        android:textColor="@color/colorprimary"
        android:textSize="14sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color000000" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_date"
        android:textColor="@color/colorprimary"
        android:textSize="14sp" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color000000" />

    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/e_title_note"
        android:textColor="@color/colorprimary"
        android:textSize="14sp" />

    <!--   </LinearLayout>

   </HorizontalScrollView>-->
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color000000" />

    <TextView
        android:id="@+id/tvAssignedTo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="AssignedTo"
        android:textColor="@color/colorprimary"
        android:textSize="14sp" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color000000" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:text="Status"
        android:textColor="@color/colorprimary"
        android:textSize="14sp" />



</LinearLayout>