<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_associate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_background_pattern">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/tbAdministrator"
            layout="@layout/include_tool_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <!-- ADMIN NAME  -->

                <EditText
                    android:id="@+id/etAdminName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorffffff"
                    android:cursorVisible="true"
                    android:hint="@string/edit_admin_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/color66000000"
                    android:textSize="16sp" />

                <!-- MOBILE NUMBER  -->

                <EditText
                    android:id="@+id/etMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorffffff"
                    android:cursorVisible="true"
                    android:hint="@string/edit_mobile_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/color66000000"
                    android:textSize="16sp" />

                <!-- COMPANY NAME  -->

                <EditText
                    android:id="@+id/etCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorffffff"
                    android:cursorVisible="true"
                    android:hint="@string/edit_company_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/color66000000"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <!-- COMPANY MAIL  -->

                    <EditText
                        android:id="@+id/etCompanyMail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/colorffffff"
                        android:cursorVisible="true"
                        android:hint="@string/edit_company_mail"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/color66000000"
                        android:textSize="16sp" />


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right|center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:src="@mipmap/ic_help" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <!-- SHARED SECRET  -->

                    <EditText
                        android:id="@+id/etSharedSecret"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/colorffffff"
                        android:cursorVisible="true"
                        android:hint="@string/edit_shared_secret"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/color66000000"
                        android:textSize="16sp" />


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right|center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:src="@mipmap/ic_help" />


                </LinearLayout>


                <!-- SHARED SECRET RE_ENTRY  -->

                <EditText
                    android:id="@+id/etSharedSecretRetry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/colorffffff"
                    android:cursorVisible="true"
                    android:hint="@string/edit_shared_secret_reentry"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColorHint="@color/color66000000"
                    android:textSize="16sp" />


                <Button
                    android:id="@+id/btSave"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape_d1622a"
                    android:gravity="center"
                    android:text="@string/button_text_save"
                    android:textColor="@color/colorffffff"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btInvite"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape_d1622a"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/button_text_invite"
                    android:textColor="@color/colorffffff"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btClose"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape_d1622a"
                    android:gravity="center"
                    android:text="@string/button_text_close"
                    android:textColor="@color/colorffffff"
                    android:textSize="16sp" />


            </LinearLayout>

        </ScrollView>


    </LinearLayout>
    <RelativeLayout
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end"
            android:layout_marginBottom="0dp"
            android:layout_weight="0.1"
            android:foregroundGravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer"></com.google.android.gms.ads.AdView>
    </RelativeLayout>
</RelativeLayout>
