<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_associate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@mipmap/ic_background_pattern">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/tbAddOffice"
            layout="@layout/include_tool_bar" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorprimary"
            android:textSize="18sp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/tvoffice_add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btOfficeLoc"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="Location Name"
        android:padding="10dp"
        android:textColor="@color/colorffffff"
        android:textSize="18sp" />

    <Button
        android:layout_below="@+id/tvoffice_add_name"
        android:id="@+id/btOfficeLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:background="@drawable/button_shape_d1622a"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/choose_your_office"
        android:textColor="@color/colorffffff"
        android:textSize="18sp" />

    <Button
        android:layout_below="@+id/btOfficeLoc"
        android:id="@+id/btOffice_saveLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:background="@drawable/button_shape_d1622a"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save_your_office"
        android:textColor="@color/colorffffff"
        android:textSize="18sp" />

    <RelativeLayout
android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end"
            android:layout_marginBottom="0dp"
            android:layout_weight="0.1"
            android:foregroundGravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer"></com.google.android.gms.ads.AdView>
    </RelativeLayout>

</RelativeLayout>